service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
    env: dev
spec:
  selector:
    app: kibana
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 5601
  type: ClusterIP
